# caro_socket_c

Client/: CMakeLists.txt  main.c
Client test/: main.c
Client test/exchange/constant/: constant.h
Client test/exchange/include/: clientHeper.h  communicateWithServer.h  handleThread.h  initClient.h  structData.h
Client test/exchange/src/: clientHeper.c  handleClient.c  initClient.c
Client test/views/include/: applicationScreen.h  handleLogicHomeScreen.h  handleLogicLoginScreen.h  handleLogicRegisterScreen.h  initScreen.h
Client/exchange/constant/: clientError.h  constant.h
Client/exchange/include/: clientHeper.h  handleClient.h  handleThread.h  initClient.h  structData.h
Client/exchange/src/: clientHeper.c  handleClient.c  initClient.c
Client/views/include/: applicationScreen.h  handleLogicGameScreen.h  handleLogicHomeScreen.h  handleLogicLoginScreen.h  handleLogicMainScreen.h  handleLogicRegisterScreen.h  initScreen.h  styleScreen.h
Client/views/src/: handleLogicGameScreen.c  handleLogicHomeScreen.c  handleLogicLoginScreen.c  handleLogicMainScreen.c  handleLogicRegisterScreen.c  initScreen.c
Client/views/src/screen/: home.glade  login.glade
Client/views/src/style/: home.css
Server/: CMakeLists.txt  main.c
Server/constant/: constant.h  serverError.h
Server/include/: caroGame.h  caro_server.h  handleDatabase.h  handleList.h  handleServer.h  handleThread.h  initServer.h  serverHeper.h  structData.h
Server/src/: caroGame.c  caro_server.c  handleDatabase.c  handleList.c  handleServer.c  initServer.c  serverHeper.c  structData.c
(+10 files in other folders)
